Added discussion and moved code from the Python file to the notebook.

--- a/pairs_trading.ipynb
+++ b/pairs_trading.ipynb
@@ -208,13 +208,15 @@
     "import os\n",
     "from datetime import datetime\n",
     "from datetime import timedelta\n",
-    "from typing import List, Tuple\n",
+    "from typing import List, Tuple, Set\n",
     "\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import statsmodels.api as sm\n",
     "import yfinance as yf\n",
-    "from matplotlib import pyplot as plt\n",
     "from numpy import log\n",
+    "from statsmodels.tsa.stattools import adfuller\n",
     "from tabulate import tabulate\n",
     "\n",
     "s_and_p_file = 's_and_p_sector_components/sp_stocks.csv'\n",
@@ -234,12 +236,16 @@
     "    return some_date\n",
     "\n",
     "\n",
-    "def read_stock_data(path: str) -> pd.DataFrame:\n",
+    "def read_s_and_p_stock_info(path: str) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Read a file containing the information on S&P 500 stocks (e.g., the symbol, company name and sector)\n",
+    "    :param path: the path to the file\n",
+    "    :return: a DataFrame with columns Symbol, Name and Sector\n",
+    "    \"\"\"\n",
     "    s_and_p_stocks = pd.DataFrame()\n",
     "    if os.access(path, os.R_OK):\n",
     "        # s_and_p_socks columns are Symbol, Name and Sector\n",
     "        s_and_p_stocks = pd.read_csv(s_and_p_file, index_col=0)\n",
-    "        # change names like BF.B or BRK.B to BF-B and BRK-B\n",
     "        new_names = [sym.replace('.', '-') for sym in s_and_p_stocks['Symbol']]\n",
     "        s_and_p_stocks['Symbol'] = new_names\n",
     "    else:\n",
@@ -251,7 +257,7 @@
     "    \"\"\"\n",
     "    Columns in the DataFrame are Symbol,Name,Sector\n",
     "    :param stocks_df:\n",
-    "    :return:\n",
+    "    :return: a dictionary where the key is the sector and the value is a list of stock symbols in that sector.\n",
     "    \"\"\"\n",
     "    sector: str = ''\n",
     "    sector_l: list = list()\n",
@@ -268,6 +274,14 @@
     "\n",
     "\n",
     "def calc_pair_counts(sector_info: dict) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Return a DataFrame\n",
+    "    :param sector_info: a dictionary where the key is the sector name and the\n",
+    "                        value is a list of stock symbols for that sector\n",
+    "    :return: a DataFrame where the index is the sector names and the columns are \"num stocks\" and \"num pairs\"\n",
+    "             \"num stocks\" is the number of stocks in the sector. \"num pairs\" is the number of unique pairs\n",
+    "             that can be formed from the set of sector stocks.  The last row is the sum of the columns.\n",
+    "    \"\"\"\n",
     "    column_label = ['num stocks', 'num pairs']\n",
     "    sectors = list(sector_info.keys())\n",
     "    counts_l: list = list()\n",
@@ -297,10 +311,11 @@
     "    This class supports retrieving and storing stock market close data from Yahoo.\n",
     "    \"\"\"\n",
     "\n",
-    "    def __init__(self, start_date: datetime, path: str):\n",
+    "    def __init__(self, start_date: datetime, path: str, update_data: bool = True):\n",
     "        self.start_date = start_date\n",
     "        self.path = path\n",
     "        self.end_date: datetime = datetime.today() - timedelta(days=1)\n",
+    "        self.update_data = update_data\n",
     "\n",
     "    def get_market_data(self,\n",
     "                        symbol: str,\n",
@@ -328,17 +343,18 @@
     "        file_path = self.symbol_file_path(symbol)\n",
     "        if os.access(file_path, os.R_OK):\n",
     "            symbol_df = pd.read_csv(file_path, index_col='Date')\n",
-    "            last_row = symbol_df.tail(1)\n",
-    "            last_date = convert_date(last_row.index[0])\n",
-    "            if last_date.date() < self.end_date.date():\n",
-    "                sym_start_date = last_date + timedelta(days=1)\n",
-    "                new_data_df = self.get_market_data(symbol, sym_start_date, datetime.today())\n",
-    "                if new_data_df.shape[0] > 0:\n",
-    "                    symbol_df = pd.concat([symbol_df, new_data_df], axis=0)\n",
-    "                    ix = symbol_df.index\n",
-    "                    ix = pd.to_datetime(ix)\n",
-    "                    symbol_df.index = ix\n",
-    "                    symbol_df.to_csv(file_path)\n",
+    "            if self.update_data:\n",
+    "                last_row = symbol_df.tail(1)\n",
+    "                last_date = convert_date(last_row.index[0])\n",
+    "                if last_date.date() < self.end_date.date():\n",
+    "                    sym_start_date = last_date + timedelta(days=1)\n",
+    "                    new_data_df = self.get_market_data(symbol, sym_start_date, datetime.today())\n",
+    "                    if new_data_df.shape[0] > 0:\n",
+    "                        symbol_df = pd.concat([symbol_df, new_data_df], axis=0)\n",
+    "                        ix = symbol_df.index\n",
+    "                        ix = pd.to_datetime(ix)\n",
+    "                        symbol_df.index = ix\n",
+    "                        symbol_df.to_csv(file_path)\n",
     "        else:\n",
     "            symbol_df = self.get_market_data(symbol, self.start_date, self.end_date)\n",
     "            if symbol_df.shape[0] > 0:\n",
@@ -363,13 +379,18 @@
     "        return close_df\n",
     "\n",
     "\n",
-    "stock_info_df = read_stock_data(s_and_p_file)\n",
-    "market_data = MarketData(start_date, s_and_p_data)\n",
+    "# stock_info_df: a DataFrame with columns Symbol, Name, Sector\n",
+    "stock_info_df = read_s_and_p_stock_info(s_and_p_file)\n",
     "stock_l: list = list(set(stock_info_df['Symbol']))\n",
     "stock_l.sort()\n",
+    "market_data = MarketData(start_date=start_date, path=s_and_p_data, update_data=False)\n",
+    "# Get close prices for the S&P 500 list\n",
     "close_prices_df = market_data.get_close_data(stock_l)\n",
     "final_stock_list = list(close_prices_df.columns)\n",
     "mask = stock_info_df['Symbol'].isin(final_stock_list)\n",
+    "# Some stocks were listed on the stock exchange later than start_date. In this case the stock will not\n",
+    "# be returned by MarketData.get_close_data(). final_stock_info has the Symbol, Name, Sector for the\n",
+    "# set of stocks that it was possible to obtain close prices for the date range.\n",
     "final_stock_info_df = stock_info_df[mask]\n",
     "\n",
     "sectors = extract_sectors(final_stock_info_df)\n",
@@ -446,16 +467,35 @@
    },
    "source": [
     "<h3>\n",
+    "Lookback Time Period\n",
+    "</h3>\n",
+    "<p>\n",
+    "A set of pairs are selected for trading using a lookback period. The longer the lookback period (with more data points) the\n",
+    "more accurate the statistics will be, assuming that the data is stable (e.g., constant mean and standard deviation).\n",
+    "Stock price time series are not stable over time, however. The mean and the\n",
+    "standard deviation changes, as do other statistics like correlation.\n",
+    "</p>\n",
+    "<p>\n",
+    "Using the lookback period to choose trading pairs and the trading algorithm, we are making the explicit assumption that the past\n",
+    "will resemble the future trading period. The longer the lookback period, the less likely it is that this will be the case because of\n",
+    "the shifting market statistics. This creates a tension between statistical accuracy and statistics that are more likely to reflect\n",
+    "the future trading period.\n",
+    "</p>\n",
+    "<p>\n",
+    "In practice the statistics for a year period (252 trading days) and a six month period (126 trading days) seem to be similar.\n",
+    "We assume that the six month period will more accurately resemble the future trading period.\n",
+    "</p>\n",
+    "\n",
+    "<h3>\n",
     "Correlation\n",
     "</h3>\n",
     "<p>\n",
-    "In selecting pairs for trading, the selection attempts to find pairs that have similar market price behavior and mean reversion.\n",
+    "In selecting pairs for trading, an attempt is made to find the pairs that have similar market price behavior and mean reversion.\n",
     "One measure of similar market price behavior is correlation.  This section examines the correlation distribution for the\n",
     "S&P 500 sector pairs.\n",
     "</p>\n",
     "<p>\n",
-    "The correlation is performed on the natural log of the close prices.  The correlation period consists of one year of trading\n",
-    "days.\n",
+    "The correlation is performed on the natural log of the close prices.\n",
     "</p>\n"
    ],
    "outputs": []
@@ -466,10 +506,9 @@
    "outputs": [],
    "source": [
     "\n",
-    "\n",
     "def get_pairs(sector_info: dict) -> List[Tuple]:\n",
     "    \"\"\"\n",
-    "    Return all of the stock pairs, where the pairs are selected from the S&P 500 sector.\n",
+    "    Return the sector stock pairs, where the pairs are selected from the S&P 500 sector.\n",
     "\n",
     "    :param sector_info: A dictionary containing the sector info. For example:\n",
     "                        energies': ['APA', 'BKR', 'COP', ...]\n",
@@ -495,7 +534,7 @@
     "    return pairs_list\n",
     "\n",
     "\n",
-    "def calc_pairs_correlation(stock_close_df: pd.DataFrame, pair: Tuple, window: int) -> np.array:\n",
+    "def calc_pair_correlation(stock_close_df: pd.DataFrame, pair: Tuple, window: int) -> np.array:\n",
     "    \"\"\"\n",
     "    Calculate the windowed correlations for a stock pair over the entire data set.\n",
     "    :param stock_close_df: A data frame containing the stock close prices\n",
@@ -503,6 +542,7 @@
     "    :param window: The data window\n",
     "    :return: a numpy array of windowed correlations for the pair over the entire time period.\n",
     "    \"\"\"\n",
+    "    window = int(window)\n",
     "    cor_v = np.zeros(0)\n",
     "    stock_a = pair[0]\n",
     "    stock_b = pair[1]\n",
@@ -520,16 +560,18 @@
     "    return cor_v\n",
     "\n",
     "\n",
-    "def calc_yearly_correlation(stock_close_df: pd.DataFrame, pairs_list: List[Tuple]) -> np.array:\n",
+    "def calc_windowed_correlation(stock_close_df: pd.DataFrame, pairs_list: List[Tuple], window: int) -> np.array:\n",
     "    \"\"\"\n",
-    "    Calculate the yearly pairs correlation over the entire time period\n",
+    "    Calculate the windowed pair correlation over the entire time period, for all the pairs.\n",
+    "\n",
     "    :param stock_close_df: A data frame containing the stock close prices. The columns are the stock tickers.\n",
     "    :param pairs_list: A list of the pairs formed from the S&P 500 sectors.\n",
-    "    :return: A numpy array with the correlcations.\n",
+    "    :return: A numpy array with the correlations.\n",
     "    \"\"\"\n",
+    "    window = int(window)\n",
     "    all_cor_v = np.zeros(0)\n",
     "    for pair in pairs_list:\n",
-    "        cor_v: np.array = calc_pairs_correlation(stock_close_df, pair, trading_days)\n",
+    "        cor_v: np.array = calc_pair_correlation(stock_close_df, pair, window)\n",
     "        all_cor_v = np.append(all_cor_v, cor_v)\n",
     "    return all_cor_v\n",
     "\n",
@@ -545,8 +587,17 @@
     "    plt.show()\n",
     "\n",
     "\n",
+    "def plot_ts(data_v: pd.Series) -> None:\n",
+    "    fix, ax = plt.subplots(figsize=(10, 8))\n",
+    "    ax.grid(True)\n",
+    "    data_v.plot()\n",
+    "    ax.axhline(y=0, color='black')\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
     "pairs_list = get_pairs(sectors)\n",
-    "yearly_cor_a = calc_yearly_correlation(close_prices_df, pairs_list)\n"
+    "\n",
+    "cor_a = calc_windowed_correlation(close_prices_df, pairs_list, int(trading_days / 2))\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -586,8 +637,7 @@
    ],
    "source": [
     "\n",
-    "\n",
-    "display_histogram(yearly_cor_a, 'Correlation between pairs', 'Count')\n"
+    "display_histogram(cor_a, 'Correlation between pairs', 'Count')\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -604,6 +654,11 @@
     "The lookback period for pairs selection is one year (254 trading days). As a first step, all of the S&P 500 sector\n",
     "pairs will be tested for correlation over the past year. The pairs that have a correlation of 0.75 or more will be\n",
     "tested for mean reversion.\n",
+    "</p>\n",
+    "<p>\n",
+    "A tangential observation: there are a small number of pairs that have a strong negative correlation (e.g., when one\n",
+    "stock goes up, the other goes down). There may be a trading opportunity in creating a long-short position for these\n",
+    "pairs.\n",
     "</p>"
    ],
    "metadata": {
