--- a/pairs_trading.ipynb
+++ b/pairs_trading.ipynb
@@ -656,9 +656,9 @@
     "tested for mean reversion.\n",
     "</p>\n",
     "<p>\n",
-    "A tangential observation: there are a small number of pairs that have a strong negative correlation (e.g., when one\n",
-    "stock goes up, the other goes down). There may be a trading opportunity in creating a long-short position for these\n",
-    "pairs.\n",
+    "There are a small number of pairs that have a strong negative correlation (a negative correlation -0.75 to approximately -0.9).\n",
+    "Initially we look at pairs that have a strong positive correlation, but it may be unwise to ignore the negative correlations as\n",
+    "well.\n",
     "</p>"
    ],
    "metadata": {
@@ -674,12 +674,6 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "#\n",
-    "# At this point we have close_prices_df which is a DataFrame containing the close prices for the S&P 500 stocks over\n",
-    "# the backtest time period.\n",
-    "#\n",
-    "# pairs_list contains the list of pairs formed from the S&P 500 sectors.\n",
-    "#\n",
     "\n"
    ],
    "metadata": {
@@ -693,25 +687,16 @@
    "cell_type": "markdown",
    "source": [
     "\n",
-    "\n",
-    "<h3>\n",
-    "Linear Regression and Cointegration\n",
-    "</h3>\n",
-    "<p>\n",
-    "In their paper, the authors Quynh Bui and Robert Ślepaczuk write that they found correlation (on the stock prices) to be a\n",
-    "stronger identification of pairs than either cointegration or the\n",
-    "<a href=\"http://bearcave.com/misl/misl_tech/wavelets/hurst/index.html\">Hurst exponent</a>.\n",
-    "</p>\n",
-    "<p>\n",
-    "The problem with using correlation alone is that stocks with high correlation may do not necessarly have mean reversion\n",
-    "behavior. A better approach is to use correlation as the first filter and then apply cointegration to determine whether\n",
-    "the stocks are mean reverting.\n",
-    "</p>\n",
     "<h3>\n",
     "Cointegration\n",
     "</h3>\n",
     "<p>\n",
-    "Cointegration is used to recognize asset pairs that are canidates for pairs trading. See the reference section for discussions on cointegration.\n",
+    "Pairs trading relies on stocks that are mean reverting. When these stocks move outside of their mean, they will revert to the mean.\n",
+    "By taking long and short positions in the pair, it is possible to profit from this mean reversion.\n",
+    "Stocks with high correlation are not necessarily mean reverting.\n",
+    "</p>\n",
+    "<p>\n",
+    "Stocks that are cointegrated (a term coined by Engle and Granger) show mean reversion.\n",
     "</p>\n",
     "<p>\n",
     "There are two common cointegration tests:\n",
@@ -725,8 +710,7 @@
     "</li>\n",
     "</ul>\n",
     "<p>\n",
-    "A number of authors perfer the Johansen test. Kris Longmore (of Robot Wealth, see references)\n",
-    "prefers to Engle-Granger linear regression. Engle-Granger is easier to understand and is used in this notebook.\n",
+    "Engle-Granger (or simply the Granger test) is easier to understand and is used in this notebook.\n",
     "</p>\n"
    ],
    "metadata": {
