--- a/pairs_trading.ipynb
+++ b/pairs_trading.ipynb
@@ -238,6 +238,8 @@
     "    elif type(some_date) == np.datetime64:\n",
     "        ts = (some_date - np.datetime64('1970-01-01T00:00')) / np.timedelta64(1, 's')\n",
     "        some_date = datetime.utcfromtimestamp(ts)\n",
+    "    # round datatime to year, month, day\n",
+    "    some_date = datetime(*some_date.timetuple()[:3])\n",
     "    return some_date\n",
     "\n",
     "\n",
@@ -1108,7 +1110,8 @@
     "Correlation and Mean Reversion\n",
     "</h2>\n",
     "<p>\n",
-    "In selecting stock pairs we are looking for a stock pair that is stationary and mean reverting. The augmented Dickey Fuller (ADF) test can be\n",
+    "In selecting stock pairs we are looking for a stock pair that, when combined, is stationary and mean reverting. The\n",
+    "Augmented Dickey Fuller (ADF) test can be\n",
     "used to determine if a process is stationary and mean reverting. The ADF test is applied to the residuals from the linear regression of\n",
     "the stock pair.\n",
     "</p>\n",
