Integerated the MarketData object.

--- a/pairs_trading.ipynb
+++ b/pairs_trading.ipynb
@@ -2,11 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "<h2>\n",
     "Pairs Trading\n",
@@ -193,11 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -338,11 +330,11 @@
     "    This class supports retrieving and storing stock market close data from Yahoo.\n",
     "    \"\"\"\n",
     "\n",
-    "    def __init__(self, start_date: datetime, path: str, update_data: bool = True):\n",
-    "        self.start_date = start_date\n",
+    "    def __init__(self, start_date: datetime, path: str):\n",
+    "        self.start_date = convert_date(start_date)\n",
     "        self.path = path\n",
-    "        self.end_date: datetime = datetime.today() - timedelta(days=1)\n",
-    "        self.update_data = update_data\n",
+    "        # self.end_date: datetime = convert_date(datetime.today() - timedelta(days=1))\n",
+    "        self.end_date: datetime = convert_date(datetime.today())\n",
     "\n",
     "    def get_market_data(self,\n",
     "                        symbol: str,\n",
@@ -352,7 +344,6 @@
     "        if type(symbol) == str:\n",
     "            t = list()\n",
     "            t.append(symbol)\n",
-    "            symbols = t\n",
     "        panel_data = yf.download(tickers=symbol, start=start_date, end=end_date, progress=False)\n",
     "        if panel_data.shape[0] > 0:\n",
     "            close_data: pd.DataFrame = panel_data[data_col]\n",
@@ -360,49 +351,81 @@
     "            close_data = pd.DataFrame()\n",
     "        close_data = close_data.round(2)\n",
     "        close_data_df = pd.DataFrame(close_data)\n",
+    "        index = pd.to_datetime(close_data_df.index.strftime('%Y-%m-%d'))\n",
+    "        close_data_df.index = index\n",
     "        return close_data_df\n",
     "\n",
     "    def symbol_file_path(self, symbol: str) -> str:\n",
     "        path: str = self.path + os.path.sep + symbol.upper() + '.csv'\n",
     "        return path\n",
     "\n",
+    "    def df_last_date(self, data_df: pd.DataFrame) -> datetime:\n",
+    "        last_row = data_df.tail(1)\n",
+    "        last_date = convert_date(last_row.index[0])\n",
+    "        return last_date\n",
+    "\n",
+    "    def findDateIndexFromEnd(self, data_df: pd.DataFrame, search_date: datetime) -> int:\n",
+    "        found_index = -1\n",
+    "        search_date = convert_date(search_date)\n",
+    "        index = data_df.index\n",
+    "        for i in range(len(index)-1, -1, -1):\n",
+    "            ix_date = convert_date(index[i])\n",
+    "            if ix_date == search_date:\n",
+    "                found_index = i\n",
+    "                break\n",
+    "        return found_index\n",
+    "\n",
+    "\n",
     "    def read_data(self, symbol: str) -> pd.DataFrame:\n",
+    "        changed = False\n",
     "        file_path = self.symbol_file_path(symbol)\n",
+    "        # Check to see if the file exists\n",
+    "        symbol_df = pd.DataFrame()\n",
     "        if os.access(file_path, os.R_OK):\n",
+    "            # The file exists, so read the CSV data\n",
     "            symbol_df = pd.read_csv(file_path, index_col='Date')\n",
-    "            if self.update_data:\n",
-    "                last_row = symbol_df.tail(1)\n",
-    "                last_date = convert_date(last_row.index[0])\n",
-    "                if last_date.date() < self.end_date.date():\n",
-    "                    sym_start_date = last_date + timedelta(days=1)\n",
-    "                    new_data_df = self.get_market_data(symbol, sym_start_date, datetime.today())\n",
-    "                    if new_data_df.shape[0] > 0:\n",
-    "                        symbol_df = pd.concat([symbol_df, new_data_df], axis=0)\n",
-    "                        ix = symbol_df.index\n",
-    "                        ix = pd.to_datetime(ix)\n",
-    "                        symbol_df.index = ix\n",
-    "                        symbol_df.to_csv(file_path)\n",
-    "        else:\n",
+    "        if symbol_df.shape[0] == 0:\n",
+    "            # Either the file contained no data or it didn't exist\n",
     "            symbol_df = self.get_market_data(symbol, self.start_date, self.end_date)\n",
-    "            if symbol_df.shape[0] > 0:\n",
-    "                if not os.access(self.path, os.R_OK):\n",
-    "                    os.mkdir(self.path)\n",
-    "                symbol_df.to_csv(file_path)\n",
-    "                if type(symbol_df) != pd.DataFrame:\n",
-    "                    symbol_df = pd.DataFrame(symbol_df)\n",
     "        if symbol_df.shape[0] > 0:\n",
+    "            last_date = self.df_last_date(symbol_df)\n",
+    "            if last_date.date() < (self.end_date - timedelta(days=1)).date():\n",
+    "                sym_start_date = last_date - timedelta(weeks=1)\n",
+    "                new_data_df = self.get_market_data(symbol, sym_start_date, self.end_date)\n",
+    "                if new_data_df.shape[0] > 0:\n",
+    "                    new_last_date = self.df_last_date(new_data_df)\n",
+    "                    if new_last_date > last_date:\n",
+    "                        last_date_ix = self.findDateIndexFromEnd(new_data_df, last_date)\n",
+    "                        if last_date_ix+1 < new_data_df.shape[0]:\n",
+    "                            new_data_sec = new_data_df.iloc[last_date_ix+1:]\n",
+    "                            symbol_df = pd.concat([symbol_df, new_data_sec], axis=0)\n",
+    "                            ix = symbol_df.index\n",
+    "                            ix = pd.to_datetime(ix)\n",
+    "                            symbol_df.index = ix\n",
+    "                            changed = True\n",
+    "            if not os.access(self.path, os.R_OK):\n",
+    "                os.mkdir(self.path)\n",
+    "            if type(symbol_df) != pd.DataFrame:\n",
+    "                symbol_df = pd.DataFrame(symbol_df)\n",
+    "            if changed:\n",
+    "                symbol_df.to_csv(file_path)\n",
     "            symbol_df.columns = [symbol]\n",
     "        return symbol_df\n",
     "\n",
     "    def get_close_data(self, stock_list: list) -> pd.DataFrame:\n",
     "        # fetch the close data in parallel\n",
-    "        with Pool() as mp_pool:\n",
-    "            close_list = mp_pool.map(market_data.read_data, stock_l)\n",
     "        close_df = pd.DataFrame()\n",
+    "        assert len(stock_list) > 0\n",
+    "        with Pool() as mp_pool:\n",
+    "            close_list = mp_pool.map(self.read_data, stock_list)\n",
+    "        # close_list = list()\n",
+    "        # for sym in stock_list:\n",
+    "        #     sym_close_df = self.read_data(sym)\n",
+    "        #     close_list.append(sym_close_df)\n",
     "        for close_data in close_list:\n",
-    "            stock_start_date = convert_date(close_data.head(1).index[0])\n",
-    "            if stock_start_date.date() == self.start_date.date():\n",
-    "                close_df = pd.concat([close_df, close_data], axis=1)\n",
+    "            close_df = pd.concat([close_df, close_data], axis=1)\n",
+    "        # drop the stocks with different start dates\n",
+    "        close_df = close_df.dropna(axis='columns')\n",
     "        return close_df\n",
     "\n",
     "\n",
@@ -428,11 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "<p>\n",
     "The table below shows the number of unique pairs for each S&P 500 sector and the total number of pairs. By drawing pairs from sectors,\n",
@@ -443,11 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -489,11 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "<h3>\n",
     "Lookback Time Period\n",
@@ -659,10 +670,7 @@
     "apple_tuple_cor_s = calc_pair_correlation(stock_close_df=close_prices_df, pair=apple_tuple, window=lookback_window)\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -681,10 +689,7 @@
     "</p>"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -713,10 +718,7 @@
     "\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -731,10 +733,7 @@
     "</p>"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -756,10 +755,7 @@
     "display_histogram(cor_a, 'Correlation between pairs', 'Count')\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -772,10 +768,7 @@
     "</p>"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "outputs": []
   },
@@ -833,10 +826,7 @@
     "cor_dist = cor_dist_obj.calc_correlation_dist()"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -847,10 +837,7 @@
     "</p>"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -876,10 +863,7 @@
     "        x_label='Window Start Date', y_label=f'Number of pairs in the {lookback_window} day window')"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -891,20 +875,14 @@
     "</p>\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "markdown",
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1097,10 +1075,7 @@
     "pair_stats_2008 = pairs_selection.stationary_analysis(start_ix=d2008_start_ix, end_ix=d2008_start_ix+lookback_window, pair=aapl_mpwr_pair)\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1124,10 +1099,7 @@
     "</p>"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "outputs": []
   },
@@ -1159,10 +1131,7 @@
     "pair_stats_2007 = pairs_selection.stationary_analysis(start_ix=0, end_ix=lookback_window, pair=aapl_mpwr_pair)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1193,10 +1162,7 @@
     "</pre>"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "outputs": []
   },
@@ -1213,10 +1179,7 @@
     "plot_df = pd.concat([holding_ret_aapl, holding_ret_mpwr], axis=1)\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1227,10 +1190,7 @@
     "</p>"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1260,10 +1220,7 @@
     "plt.axhline(y=1, color='red')\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1275,10 +1232,7 @@
     "\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1293,10 +1247,7 @@
     "</p>"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1323,10 +1274,7 @@
     "plt.show()"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1352,10 +1300,7 @@
     "cor_a = np.array(cor_l)\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1367,10 +1312,7 @@
     "</p>"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1391,20 +1333,14 @@
     "display_histogram(cor_a, 'Pairs Correlation', 'Count')"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "markdown",
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1415,10 +1351,7 @@
     "\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1452,19 +1385,12 @@
     "</p>\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "<h2>\n",
     "References\n",
